# rust-practice

./: .gitignore  .travis.yml  Cargo.toml  README.md
projects/algorithms_and_data_structures/: Cargo.toml
projects/algorithms_and_data_structures/src/: binary_add.rs  d_ary_heap.rs  heap.rs  inversions.rs  macros.rs  main.rs  matrix.rs  merge_sorted_list.rs  min_max.rs  quicksort.rs  random.rs
projects/command-line-rust-book/chap1/: Cargo.toml
projects/command-line-rust-book/chap1/tests/: cli.rs  false_test.rs  true_test.rs
projects/complex/src/: lib.rs
projects/env_logger_demo/: Cargo.toml
projects/env_logger_demo/src/: main.rs
projects/logic_gates/: README.md
projects/logic_gates/src/: lib.rs
projects/logic_gates/tests/: half_adder_test.rs
projects/macro_exercises/: Cargo.toml
projects/macro_exercises/src/: main.rs
projects/macro_map/src/: lib.rs
projects/minigrep/src/: lib.rs  main.rs  test.txt
projects/slog_demo/: Cargo.toml
projects/slog_demo/src/: enemy.rs  main.rs  player.rs  weapon.rs
projects/specific_topics/: Cargo.toml
projects/specific_topics/src/: lib.rs
projects/todo_list_parser/: Cargo.toml
projects/todo_list_parser/examples/: basics.rs
projects/todo_list_parser/src/: error.rs  lib.rs
projects/user_auth/: Cargo.toml
projects/user_auth/src/: lib.rs
projects/web_server/: hello.html  hello_async.html  not_found.html
projects/web_server/src/: main.rs
projects/word_counter/: Cargo.toml
projects/word_counter/examples/: example.rs
projects/word_counter/src/: example.txt  main.rs
src/: mutating_argument.rs
