[workspace]
resolver = "2"
members = [ "projects/complex",
    "projects/complex",
    "projects/logic_gates",
    "projects/word_counter",
    "projects/todo_list_parser", 
    "projects/macro_map", 
    "projects/macro_exercises", 
    "projects/user_auth", 
    "projects/env_logger_demo", 
    "projects/slog_demo", 
    "projects/minigrep",
]
